--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	color: white;
 }
+
 header {
 	border: 0px solid red;
 	background-color: #0046be;
@@ -13,23 +14,34 @@ nav {
 	display: flex;
 	justify-content: space-between;
 }
+nav > div {
+	width: 100px;
+	padding-top: 2px;
+}
 
-nav > img {
-	width: 8%;
+div > a > img {
+	width: 100%;
 }
 #sea {
 	border: 0px solid grey;
 	width: 600px;
+	height: 40px;
+	margin: 2px;
 	padding: 10px 20px;
-	border-radius: 5px;
+	border-radius: 10px;
 	font-size: large;
 }
+#sea:focus {
+	outline: 1px solid grey;
+}
 
-nav > div {
+.user,
+.cart {
 	transition: all 0.5s;
 }
 
-nav > div:hover {
+.user:hover,
+.cart:hover {
 	background-color: rgb(78, 136, 235);
 	padding: 10px;
 	border-radius: 5px;
@@ -41,7 +53,6 @@ nav > a {
 	text-decoration: none;
 	color: white;
 	padding: 10px;
-
 	transition: all.5s;
 }
 nav > a:hover {
@@ -82,6 +93,124 @@ nav > a:hover {
 	margin: 0%;
 	text-decoration: none;
 	color: white;
+}
+
+#signin,
+#login {
+	border: 0px solid red;
+	padding: 20px;
+	color: #040c13;
+	width: 25%;
+	margin: 40px auto;
+	text-align: center;
+	font-family: "Human BBY Digital", "Human Fallback", Arial, Helvetica,
+		sans-serif;
+	background-color: #f0f2f4;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+#signin > h3 {
+	font-weight: 600;
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+#login > h3 {
+	font-weight: 500;
+	font-size: 20px;
+	margin-bottom: 20px;
+}
+
+#signin > p {
+	font-size: 14px;
+	margin: 20px 0px;
+}
+#signin > p > a {
+	color: #2f7cff;
+}
+#signin > p > a:hover {
+	color: black;
+	text-decoration: underline;
+}
+
+form > input {
+	border: 0.5px solid grey;
+	padding: 10px 20px;
+	margin: 10px auto;
+	width: 75%;
+	border-radius: 5px;
+	display: block;
+}
+form > input:focus {
+	outline: 1px solid grey;
+}
+.forg {
+	display: block;
+	margin-bottom: 11px;
+	margin-right: 182px;
+	text-decoration: none;
+	font-size: 11px;
+	color: #2f7cff;
+}
+form > p {
+	font-size: 11px;
+}
+form > p > a {
+	text-decoration: none;
+	color: #2f7cff;
+}
+form > p > a:hover {
+	text-decoration: underline;
+	color: #0046be;
+}
+
+form > hr {
+	width: 85%;
+	margin: 20px auto;
+}
+
+#sign {
+	border: 1px solid #0046be;
+	width: 87%;
+	padding: 10px 20px;
+	border-radius: 5px;
+	background-color: #0046be;
+	color: white;
+	transition: all 0.5s;
+}
+#sign:hover {
+	background-color: #001e73;
+	cursor: pointer;
+}
+
+.em-btn {
+	font-size: 14px;
+	display: block;
+	margin: auto;
+	width: 75%;
+	padding: 10px 20px;
+	border-radius: 5px;
+	color: #0046be;
+	background-color: white;
+	border: 1px solid #0046be;
+	transition: all 0.5s;
+	text-decoration: none;
+}
+.em-btn:hover {
+	border: 1px solid #0046be;
+	background-color: #001e73;
+	color: white;
+	cursor: pointer;
+}
+
+button > img {
+	height: 20px;
+}
+
+.bbg {
+	font-weight: 600;
+	text-align: left;
+	margin-left: 25px;
 }
 
 .part {
@@ -279,8 +408,8 @@ hr ~ p {
 	padding: 10px;
 	margin-right: 10px;
 }
-#mail:active {
-	border: 0.5px solid grey;
+#mail:focus {
+	outline: 1px solid grey;
 }
 
 .d {
@@ -406,7 +535,8 @@ hr ~ p {
 	border-radius: 10px;
 	text-align: center;
 	transition: all 0.5s;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+		rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .t-2-b > div:hover {
@@ -420,14 +550,12 @@ hr ~ p {
 	text-align: left;
 	transition: all 0.5s;
 	font-weight: 600;
-
 }
-.t-2-b > div > h4{
-	font-size:small;
+.t-2-b > div > h4 {
+	font-size: small;
 	font-weight: 500;
 	text-align: left;
 	transition: all 0.5s;
-
 }
 
 .t-2-b > div > h4:hover {
@@ -551,7 +679,7 @@ svg {
 }
 
 div > strong {
-	color: #2f7cff;
+	color: #0046be;
 	font-size: 12px;
 }
 div > strong:hover {
@@ -703,4 +831,178 @@ div > strong:hover {
 }
 footer > hr {
 	width: 1283px;
+}
+
+/* cart styling */
+
+.art{
+	background-color: #f0f2f4;
+}
+
+.cart-pge {
+	border: 0px solid red;
+	color: black;
+	/* height: 800px; */
+	padding: 20px;
+	padding-bottom: 0px;
+	display: flex;
+	justify-content: space-between;
+}
+#cart-a {
+	border: 0px solid purple;
+	background-color: #f0f2f4;
+	width: 55%;
+	padding: 20px;
+	padding-top: 0px;
+}
+
+#cart-a>h3{
+	margin-top: 0px;
+
+}
+#pay {
+	border: 0px solid blue;
+	background-color: white;
+	width: 40%;
+	box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+#pay > h3 {
+	border: 0px solid teal;
+	width: 28%;
+	margin: 20px auto;
+}
+#pay > hr {
+	width: 80%;
+}
+
+#pay > div {
+	width: 80%;
+	margin: 10px auto;
+	display: flex;
+	justify-content: space-between;
+	font-size: 14px;
+	letter-spacing: 1.3px;
+}
+
+#check {
+	border: 1px solid #ffe000;
+	display: block;
+	padding: 15px 20px;
+	background-color: #ffe000;
+	margin: 10px auto;
+	width: 80%;
+	font-size: 15px;
+	font-weight: 600;
+	cursor: pointer;
+	transition: all 0.5s;
+}
+
+#check:hover {
+	background-color: #fff200;
+}
+
+#pay > p {
+	border: 0px solid red;
+	width: 80%;
+	margin: 20px auto;
+	font-size: 14px;
+	/* text-align: center; */
+}
+
+#pay > div > a {
+	text-decoration: none;
+	color: #2f7cff;
+}
+#pay > div > a:hover {
+	text-decoration: underline;
+	color: #0046be;
+}
+
+#pay > p > a {
+	color: #2f7cff;
+	text-decoration: none;
+}
+#pay > p > a:hover {
+	color: #0046be;
+	text-decoration: underline;
+}
+
+#pay > h4 {
+	border: 0px solid blueviolet;
+	width: 80%;
+	margin: auto;
+}
+
+#pay > div > div:nth-child(1) img {
+	height: 60px;
+	display: block;
+}
+#pay > div > div:nth-child(1) a {
+	font-size: 13px;
+	color: #2f7cff;
+	text-decoration: none;
+}
+#pay > div > div:nth-child(1) a:hover {
+	color: #0046be;
+	text-decoration: underline;
+}
+
+#pay > div > div:nth-child(2) {
+	border: 0px solid green;
+	width: 70%;
+}
+
+.display-data {
+	display: grid;
+	border: 0px solid purple;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+	background-color: white;
+	/* height: 350px; */
+	box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+
+
+.saved {
+	border: 0px solid green;
+	background-color: white;
+	margin: 40px auto;
+	padding: 20px;
+	text-align: center;
+	box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+.saved > h3 {
+	text-align: left;
+}
+.saved > p {
+	font-size: 13px;
+	margin: 10px auto;
+}
+
+.saved > p > a {
+	text-decoration: none;
+	color: #2f7cff;
+}
+.saved > p > a:hover {
+	text-decoration: underline;
+	color: #0046be;
+}
+
+
+#cart-foot{
+	border: 0px solid red;
+	color: black;
+	padding: 20px;
+	padding-top: 0%;
+	margin-top: -120px;
+}
+
+#atg{
+	border: 0px solid blue;
+	padding: 20px;
+	width: 55%;
+	font-size: 11.5px;
+	color: rgb(57, 56, 56);
 }
